# stussy-overall

./: README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: AppProviders.tsx  layout.tsx  page.tsx
src/app/editor/: layout.tsx  page.tsx
src/app/editor/@elementsTree/: page.tsx
src/app/editor/@properties/: page.tsx
src/app/editor/@view/: page.tsx
src/app/new/: layout.tsx  page.tsx
src/app/new/@poster/: page.tsx
src/app/new/@tweet/: page.tsx
src/components/: customRadio.tsx  icon.tsx
src/components/template-box/: image.tsx  rectangle.tsx  text.tsx
src/config/types/: canvasObjects.ts  preview.ts  ratio.ts  template.ts
src/styles/: globals.css  globals.scss
